# gittask-cli

./: README.md  pyproject.toml
gittask/: asana_client.py  config.py  database.py  git_handler.py  main.py  utils.py
gittask/commands/: auth.py  checkout.py  commit.py  finish.py  init.py  pr.py  push.py  session.py  status.py  sync.py
gittask/tui/screens/: dashboard.py  task_search.py
gittask/tui/widgets/: task_card.py
tests/: test_push.py
