[project]
name = "gittask"
version = "0.1.0"
description = "Git-Asana CLI & Time Tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "questionary>=2.0.0",
    "gitpython>=3.1.0",
    "asana>=5.0.0",
    "tinydb>=4.8.0",
    "keyring>=24.0.0",
    "python-dateutil>=2.8.2",
    "thefuzz>=0.20.0",
    "PyGithub",
]

[project.scripts]
gittask = "gittask.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
